# Reverb_2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Geraint-Luff_DSP/: delay.h  rates.h  spectral.h  windows.h
assets/: CMakeLists.txt
plugin/: CMakeLists.txt
plugin/reverb/: reverb.cpp  reverb.h  reverb_plugin.cpp  reverb_plugin.h
plugin/reverb/include/dsp/: FDN_Reverb.h
plugin/reverb/include/gui/: Controller Slider.h  CustomLookAndFeel.h  PluginEditor.h
plugin/reverb/include/proces_DAW_control/: Parameters.h  PluginProcessor.h
plugin/reverb/src/gui/: Controller Slider.cpp  CustomLookAndFeel.cpp  Parameters.cpp  PluginEditor.cpp
plugin/reverb/src/proces_DAW_control/: Parameters.cpp  PluginProcessor.cpp
